; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/pvscsi/extr_pvscsi.c_pvscsi_hcb_to_context.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/pvscsi/extr_pvscsi.c_pvscsi_hcb_to_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvscsi_softc = type { %struct.pvscsi_hcb* }
%struct.pvscsi_hcb = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pvscsi_softc*, %struct.pvscsi_hcb*)* @pvscsi_hcb_to_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pvscsi_hcb_to_context(%struct.pvscsi_softc* %0, %struct.pvscsi_hcb* %1) #0 {
  %3 = alloca %struct.pvscsi_softc*, align 8
  %4 = alloca %struct.pvscsi_hcb*, align 8
  store %struct.pvscsi_softc* %0, %struct.pvscsi_softc** %3, align 8
  store %struct.pvscsi_hcb* %1, %struct.pvscsi_hcb** %4, align 8
  %5 = load %struct.pvscsi_hcb*, %struct.pvscsi_hcb** %4, align 8
  %6 = load %struct.pvscsi_softc*, %struct.pvscsi_softc** %3, align 8
  %7 = getelementptr inbounds %struct.pvscsi_softc, %struct.pvscsi_softc* %6, i32 0, i32 0
  %8 = load %struct.pvscsi_hcb*, %struct.pvscsi_hcb** %7, align 8
  %9 = ptrtoint %struct.pvscsi_hcb* %5 to i64
  %10 = ptrtoint %struct.pvscsi_hcb* %8 to i64
  %11 = sub i64 %9, %10
  %12 = sdiv exact i64 %11, 4
  %13 = add nsw i64 %12, 1
  %14 = trunc i64 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
